@@ -193,6 +193,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_settings.obj \
 	$(OBJS)\test_gui_socket.obj \
 	$(OBJS)\test_gui_boxsizer.obj \
+	$(OBJS)\test_gui_wrapsizer.obj \
 	$(OBJS)\test_gui_valnum.obj \
 	$(OBJS)\test_gui_clientsize.obj \
 	$(OBJS)\test_gui_setsize.obj \
@@ -1041,6 +1042,9 @@ $(OBJS)\test_gui_socket.obj: .\net\socket.cpp
 
 $(OBJS)\test_gui_boxsizer.obj: .\sizers\boxsizer.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\sizers\boxsizer.cpp
+
+$(OBJS)\test_gui_wrapsizer.obj: .\sizers\wrapsizer.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\sizers\wrapsizer.cpp
 
 $(OBJS)\test_gui_valnum.obj: .\validators\valnum.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\validators\valnum.cpp
